--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -18,6 +18,12 @@ jobs:
           npm install @codedoc/cli
           # build repo
           (PATH=$(npm bin):$PATH && codedoc build)
+          # copy assets
+          cp favicon.ico dist/
+          cp -r img/ dist/img/
+        env:
+          GITHUB_BUILD: true
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
